fixing courses-icon wrapping

--- a/src/css/courses-list.css
+++ b/src/css/courses-list.css
@@ -63,14 +63,20 @@
     font-size: 1rem;
 }
 
+/*course-row is added to divs containers in coursesList.js*/
 .course-row {
     display: flex;
     flex-direction: row-reverse;
-    flex-wrap: wrap;
     width: 700px;
     justify-content: center;
 }
-
+.wrapped {
+    flex-wrap: wrap;
+}
+/*not-reversed is added to divs containers when the mediaQuery is less than 607px in coursesList.js to divs who has 4 items, to prevent disorder*/
+.order-1 {
+    order: 1;
+}
 @media screen and (min-width: 500px) {
     .courses-list {
         width: 80%;
